--- a/plugin/css/custom-style.css
+++ b/plugin/css/custom-style.css
@@ -10,6 +10,14 @@
     white-space: normal;
     border:1px solid #dddddd;
 }
+
+.right-nav
+{
+    word-wrap: break-word;
+    white-space: normal;
+    border-left:1px solid #dddddd;
+}
+
 .button-wrap{
     white-space:normal;
     margin-top:3px;
@@ -20,11 +28,19 @@
     white-space: normal;
 }
 .main-section{
-    width:800px;
-
+    width:730px;
 }
 .centered {
     margin-left: 350px;
+}
+
+.ads-style {
+    background-color: #EEF1FA;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left:5px;
+    padding-right:5px;
+    margin-bottom: 1px;
 }
 
 .odd {
