ng-grid ui implemented

--- a/plugin/css/custom-style.css
+++ b/plugin/css/custom-style.css
@@ -69,7 +69,9 @@
     color: #333333;
     background-color: #ffffff;
 }
-
+.height100 {
+    height: 100px;
+}
 /*screen-xs*/
 @media (max-width: 768px) {
     .colorBg{background-color:#f2f2f2;}
