--- a/plugin/css/custom-style.css
+++ b/plugin/css/custom-style.css
@@ -64,6 +64,16 @@
     color: #333333;
     background-color: #ffffff;
 }
+.top5{margin-top:5px}
+.top10{margin-top:10px}
+.top15{margin-top:15px}
+.top20{margin-top:20px}
+.top30{margin-top:30px}
+.bottom5{margin-bottom:5px}
+.bottom10{margin-bottom:10px}
+.bottom15{margin-bottom:15px}
+.bottom20{margin-bottom:20px}
+.bottom30{margin-bottom:30px}
 .modal-backdrop.am-fade {
     background: rgba(0, 0, 0, 0.5);
 }
