--- a/plugin/views/search-results.html
+++ b/plugin/views/search-results.html
@@ -27,9 +27,7 @@
         <div class="col-sm-2 col-md-2 sidebar left-nav colorBg" ng-show="hasFacets()">
         	<span>
                 <br><br>
-                <div>
-        				{{parsedSearchResults.found}} results found
-        		</div>
+                <div ng-bind="parsedSearchResults.found + ' results found'"></div>
         	</span>
 
             <div class="col-lg-12" ng-repeat="item in selectedItems" slide-show="showInput">
@@ -78,7 +76,7 @@
            </div>
             <div class="row-fluid main-section" ng-if="parsedSearchResults.records.length">
                 <div class="custom-csv-link-location hidden">
-                    <span class="ui-grid-exporter-csv-link">&nbsp</span>
+                    <span class="ui-grid-exporter-csv-link">&nbsp;</span>
                 </div>
                 <div class="text-right bottom10"><button class="btn btn-primary" data-ng-click="openVisualBox()">Create visualization</button></div>
                 <div ui-grid="gridOptions" class="myGrid" external-scopes="dUtils" ui-grid-exporter></div>
